tests/NormalTests/paczka2/big_fuzzy/59488228.err
Error in line 4: Ov55U S955 7,7
Error in line 38: A192 A601 13,8
Error in line 48: bW6t A601 98,9
Error in line 62: bW6t A192 94,5
Error in line 74: A192 S410 79,0
Error in line 73: Ov55U A601 234,5
Error in line 89: O3yMYqvXa A601 33,6
Error in line 98: A192 A601 31,6
Error in line 87: 0YdbYoy4zk S410 62,4
Error in line 104: O3yMYqvXa S955 6,2
Error in line 110: O3yMYqvXa S410 17,3
Error in line 113: O3yMYqvXa A192 57,8
Error in line 112: jtvvBZQ89e S955 43,5
Error in line 118: O3yMYqvXa S955 27,6
Error in line 115: Ov55U S955 88,9
Error in line 128: VFw7o3lef0 S955 36,8
Error in line 127: Ov55U A601 38,4
Error in line 136: Ov55U S410 13,1
Error in line 135: O3yMYqvXa S410 13,0
Error in line 149: bW6t S410 19,4
Error in line 167: Ov55U A192 89,7
Error in line 156: bW6t A192 68,9
Error in line 182: VFw7o3lef0 A601 80,0
Error in line 187: bW6t A192 1,5
Error in line 196: Ov55U A601 53,2
Error in line 205: 0YdbYoy4zk A601 13,2
Error in line 210: A192 S410 63,3
Error in line 214: VFw7o3lef0 S410 33,8
Error in line 211: O3yMYqvXa A192 76,9
Error in line 217: VFw7o3lef0 A192 42,2
Error in line 227: Ov55U A6]1 62,7
Error in line 226: VFw7o3lef0 S410 50,7
Error in line 232: A192 A192 51,0
Error in line 229: bW6t A601 95,4
Error in line 241: bW6t S955 80,0
